update giới tinh, ngày tháng năm sinh, địa chỉ, xóa quốc gia, đều chỉnh lại chức năng sao cho lưu được dữ liệu không bị mất